# telegram-jokes-bot

./: .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05eb10e293b6_change_user_id_to_bigint.py  78de2689f355_change_joke_hash_to_32.py
app/: bot.py  config.py  main.py
app/database/: crud.py  db.py  models.py
app/handlers/: favorites.py  help.py  jokes.py  start.py
app/keyboards/: favorites_keyboard.py  jokes_keyboard.py
app/parsers/: jokes_parser.py
app/services/: delete_favorites.py  display_favorites.py  favorites_handlers.py
app/states/: FavoritesState.py
